--- a/.gitignore
+++ b/.gitignore
@@ -27,14 +27,14 @@ app/node_modules
 app/vendor
 app/.env
 app/public/wordpress
-app/languages
-app/mu-plugins/*
-app/!mu-plugins/mu-plugins.php
-app/plugins/*
-!app/plugins/index.php
-app/upgrade
-app/uploads
-app/wordpress
+app/public/languages
+app/public/mu-plugins/*
+!app/public/mu-plugins/mu-plugins.php
+app/public/plugins/*
+!app/public/plugins/index.php
+app/public/upgrade
+app/public/uploads
+app/public/wordpress
 
 
 db-data
