--- a/app/composer.json
+++ b/app/composer.json
@@ -10,6 +10,10 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "wordplate/framework": "^10.0",
+        "wordplate/headache": "^1.4",
+        "wpackagist-plugin/advanced-custom-fields": "^5.12",
+        "wpackagist-plugin/blade": "^0.3.7",
+        "wpackagist-plugin/clean-image-filenames": "^1.3",
         "wpackagist-plugin/hide-updates": "^1.1"
     },
     "config": {
@@ -24,7 +28,11 @@
     "extra": {
         "installer-paths": {
             "public/mu-plugins/{$name}": [
-                "type:wordpress-muplugin"
+                "type:wordpress-muplugin",
+                "wpackagist-plugin/hide-updates",
+                "wpackagist-plugin/advanced-custom-fields",
+                "wpackagist-plugin/clean-image-filenames",
+                "wpackagist-plugin/blade"
             ],
             "public/plugins/{$name}": [
                 "type:wordpress-plugin"
