--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ app/public/wordpress
 app/public/languages
 app/public/mu-plugins/*
 !app/public/mu-plugins/mu-plugins.php
+!app/public/mu-plugins/advanced-custom-fields-pro
 app/public/plugins/*
 !app/public/plugins/index.php
 app/public/upgrade
