--- a/app/composer.json
+++ b/app/composer.json
@@ -9,9 +9,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.4 || ^8.0",
+        "wordplate/acf": "^11.2",
         "wordplate/framework": "^10.0",
         "wordplate/headache": "^1.4",
-        "wpackagist-plugin/advanced-custom-fields": "^5.12",
         "wpackagist-plugin/blade": "^0.3.7",
         "wpackagist-plugin/clean-image-filenames": "^1.3",
         "wpackagist-plugin/hide-updates": "^1.1"
@@ -30,7 +30,6 @@
             "public/mu-plugins/{$name}": [
                 "type:wordpress-muplugin",
                 "wpackagist-plugin/hide-updates",
-                "wpackagist-plugin/advanced-custom-fields",
                 "wpackagist-plugin/clean-image-filenames",
                 "wpackagist-plugin/blade"
             ],
