--- a/app/composer.json
+++ b/app/composer.json
@@ -12,7 +12,6 @@
         "wordplate/acf": "^11.2",
         "wordplate/framework": "^10.0",
         "wordplate/headache": "^1.4",
-        "wpackagist-plugin/blade": "^0.3.7",
         "wpackagist-plugin/clean-image-filenames": "^1.3",
         "wpackagist-plugin/hide-updates": "^1.1"
     },
@@ -30,8 +29,7 @@
             "public/mu-plugins/{$name}": [
                 "type:wordpress-muplugin",
                 "wpackagist-plugin/hide-updates",
-                "wpackagist-plugin/clean-image-filenames",
-                "wpackagist-plugin/blade"
+                "wpackagist-plugin/clean-image-filenames"
             ],
             "public/plugins/{$name}": [
                 "type:wordpress-plugin"
