--- a/app/.editorconfig
+++ b/app/.editorconfig
@@ -9,9 +9,12 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.php]
-indent_size = 4
+indent_size = 2
 
 [composer.json]
+indent_size = 4
+
+[*.scss]
 indent_size = 4
 
 [*.md]
