--- a/app/package.json
+++ b/app/package.json
@@ -12,5 +12,18 @@
     ">0.25%",
     "not ie 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@wordpress/browserslist-config": "^4.1.2",
+    "browserslist": "^4.20.3",
+    "laravel-mix-eslint": "^0.2.0",
+    "laravel-mix-stylelint": "^1.0.0",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.52.1",
+    "sass-loader": "^12.6.0",
+    "stylelint": "^14.8.5",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-no-unsupported-browser-features": "^5.0.3",
+    "stylelint-order": "^5.0.0"
+  }
 }
