--- a/app/composer.json
+++ b/app/composer.json
@@ -8,10 +8,10 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.0",
         "timber/timber": "^1.19",
         "wordplate/acf": "^11.2",
-        "wordplate/framework": "^10.0",
+        "wordplate/framework": "^11.0",
         "wordplate/headache": "^1.4",
         "wpackagist-plugin/clean-image-filenames": "^1.3",
         "wpackagist-plugin/hide-updates": "^1.1"
