--- a/app/public/.gitignore
+++ b/app/public/.gitignore
@@ -3,6 +3,7 @@ mu-plugins/*
 !mu-plugins/mu-plugins.php
 !mu-plugins/advanced-custom-fields-pro
 plugins/*
+!plugins/custom-bo.php
 !plugins/index.php
 upgrade
 uploads
