--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,9 @@
   "devDependencies": {
     "@wordpress/browserslist-config": "^4.1.2",
     "browserslist": "^4.20.3",
+    "eslint": "^8.16.0",
+    "eslint-plugin-vue": "^9.0.1",
+    "eslint-webpack-plugin": "^3.1.1",
     "laravel-mix-eslint": "^0.2.0",
     "laravel-mix-stylelint": "^1.0.0",
     "resolve-url-loader": "^5.0.0",
@@ -24,6 +27,7 @@
     "stylelint": "^14.8.5",
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-no-unsupported-browser-features": "^5.0.3",
-    "stylelint-order": "^5.0.0"
+    "stylelint-order": "^5.0.0",
+    "stylelint-webpack-plugin": "^3.3.0"
   }
 }
