--- a/app/composer.json
+++ b/app/composer.json
@@ -14,7 +14,8 @@
         "wordplate/framework": "^11.0",
         "wordplate/headache": "^1.4",
         "wpackagist-plugin/clean-image-filenames": "^1.3",
-        "wpackagist-plugin/hide-updates": "^1.1"
+        "wpackagist-plugin/hide-updates": "^1.1",
+        "wpackagist-plugin/svg-support": "^2.4"
     },
     "config": {
         "optimize-autoloader": true,
