--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
   ],
   "devDependencies": {
     "@wordpress/browserslist-config": "^4.1.2",
+    "bootstrap": "^5.1.3",
     "browserslist": "^4.20.3",
     "eslint": "^8.16.0",
     "eslint-plugin-vue": "^9.0.1",
